# ground_truth

./: CMakeLists.txt  README.md  package.xml
config/: c910_379446E0.yaml  calibration_c910.yaml  camera_ps3_2.yaml  g7x.yaml  ps3_d1.yaml  tags.yaml
launch/: april.launch  c910.launch  cam_c910.launch  cam_ps3.launch  ezcap.launch  g7x.launch  ground.launch  ps3.launch  usbcam_c910.launch
scripts/: ground_truth_publisher.py
