<?xml version="1.0"?>
<package format="2">
  <name>ground_truth</name>
  <version>0.0.1</version>
  <description>The ground_truth package</description>
  <maintainer email="altineller@gmail.com">Can Altineller</maintainer>
  <license>Copyright Can Altineller, 2019</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>
